fix(css):  fix broken layout on mobile
wrap long title

fix #10

--- a/assets/themes/bootstrap-3/css/style.scss
+++ b/assets/themes/bootstrap-3/css/style.scss
@@ -98,3 +98,9 @@ h1, h2, h3, h4 {
     font-size: 1.3em;
     line-height: 1.5em;
 }
+
+/* wrap text */
+.post-article a, .post-article code {
+    word-wrap: break-word;
+    white-space: pre-wrap;
+}
